--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 
     <div class="project-card">
       <h3>Employee Management System</h3>
-      <p>Employee Management System built with Angular, Typescript, bootstrap,html, css and REST API.</p>
+      <p>An employee management application built using Angular, TypeScript, Bootstrap, HTML, CSS, and REST APIs.</p>
       <ul>
-        <li>User login & registration</li>
-        <li>Managing the employees and their projects</li>		
+        <li>User login and registration</li>
+        <li>Manage employees and their assigned projects</li>		
       </ul>
       <a href="#">Live Demo</a> |
       <a href="https://github.com/technosadique/angular19/tree/master/employee_app">GitHub Repo</a>
@@ -65,10 +65,11 @@
 
     <div class="project-card">
       <h3>Fleet Cabin System</h3>
-      <p>Fleet Cabin System built with PHP/MySQL/ElasticSearch/GIT/Chrome Extensions/REST API Applications using CodeIgniter.</p>
+      <p>A fleet management system developed using PHP, MySQL, Elasticsearch, Git, Chrome Extensions, and REST APIs with CodeIgniter.</p>
       <ul>
-         <li>company login</li> 
-        <li>Managing car booking,invoice generation,report generation</li>
+         <li>Company login system</li> 
+        <li>Car booking management</li>
+        <li>Invoice and report generation</li>
       </ul>
       <a href="https://app.fleetcabin.com/">Live Demo</a> |
       <a href="#">GitHub Repo</a>
@@ -77,10 +78,10 @@
 	
 	<div class="project-card">
       <h3>Doobert.com - Animal Rescue Coordination Plateform</h3>
-      <p>Animal Rescue System built with PHP/MySQL/Codeigniter/bootstrap/html/css/javascript</p>
+      <p>An animal rescue coordination system developed using PHP, MySQL, CodeIgniter, Bootstrap, HTML, CSS, and JavaScript.</p>
       <ul>
-         <li>User login & registration</li>
-        <li>Managing animal rescue</li>
+         <li>User login and registration</li>
+        <li>Animal rescue management system</li>
       </ul>
       <a href="https://app.doobert.com/">Live Demo</a> |
       <a href="#">GitHub Repo</a>
@@ -89,21 +90,21 @@
 	
 	<div class="project-card">
       <h3>Gaurav Diamondzz - B2B Diamond Inventory Management</h3>
-      <p>Live inventory checking for jewelers and retailers globally built with PHP/MySQL/Symfony/html/css/javascript</p>
+      <p>A global platform for live diamond inventory checking, designed for jewelers and retailers.
+        Built using PHP, MySQL, Symfony, HTML, CSS, and JavaScript.</p>
       <ul>        
-        <li>Live inventory checking for jewelers and retailers</li>
-      </ul>
+        
       <a href="https://www.instagram.com/gauravdiamonds/">Live Demo</a> |
       <a href="#">GitHub Repo</a>
     </div>
 	
 	<div class="project-card">
       <h3>Wordsmith - E-learning Platform</h3>
-      <p>Wordsmith is an e-learning platform built with PHP/MySQL/html/css/javascript</p>
+      <p>Wordsmith is an e-learning platform developed using PHP, MySQL, HTML, CSS, and JavaScript.</p>
       <ul>        
-        <li>Login and Registration</li>
-        <li>online course learning system</li>
-        <li>User can download course material without having together in classroom</li>
+        <li>Secure login and registration system</li>
+        <li>Online course learning functionality</li>
+        <li>Users can download course materials without attending in-person classes</li>
       </ul>
       <a href="https://www.instagram.com/gauravdiamonds/">Live Demo</a> |
       <a href="#">GitHub Repo</a>
