--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
   <!-- Footer -->
   <footer class="text-center py-3 bg-light">
-    <p class="mb-0">&copy; 2025 Mohammad Sadique.</p>
+    <p class="mb-0">&copy; 2025 Mohammad Sadique All Rights Reserved</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
