--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       <ul class="list-unstyled">
         <li><i class="bi bi-envelope-fill me-2"></i><strong>Email:</strong> <a href="mailto:sadiqueblr@yahoo.com" class="text-white">sadiqueblr@yahoo.com</a></li>
         <li><i class="bi bi-telephone-fill me-2"></i><strong>Phone:</strong> +91-8850180646</li>
-        <li><i class="bi bi-linkedin me-2"></i><strong>LinkedIn:</strong> <a href="#" class="text-white">linkedin.com/in/mohammadsadique</a></li>
+        <li><i class="bi bi-linkedin me-2"></i><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/mohd-sadique-b46642326" class="text-white">linkedin.com/in/mohd-sadique-b46642326</a></li>
         <li><i class="bi bi-github me-2"></i><strong>GitHub:</strong> <a href="https://github.com/technosadique" class="text-white">github.com/sadique</a></li>
       </ul>
     </div>
