--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <span class="badge bg-info text-dark">CodeIgniter</span>
         <span class="badge bg-warning text-dark">Symfony</span>
         <span class="badge bg-primary">Angular</span>
+        <span class="badge bg-primary">OOPs</span>
         <span class="badge bg-dark">MySQL</span>
         <span class="badge bg-success">JavaScript</span>
         <span class="badge bg-info">Ajax</span>
